[package]
name = "golem-common"
version = "0.0.0"
edition = "2021"

homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "Shared code between Golem services"

license-file = "../LICENSE"

build = "build.rs"

[features]
default = [
    "base-model",
    "config",
    "model",
    "observability",
    "poem",
    "protobuf",
    "redis",
    "serialization",
    "sql",
    "tokio",
]

agent-extraction = ["dep:wasmtime-wasi", "dep:wit-parser"]
base-model = []
config = ["model", "dep:figment"]
model = [
    "base-model",
    "dep:golem-wasm-rpc",
    "dep:golem-wasm-ast",
    "dep:golem-rib",
    "dep:wasmtime"
]
observability = [
    "config",
    "dep:console-subscriber",
    "dep:prometheus",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-serde",
]
poem = [
    "dep:poem",
    "dep:poem-openapi",
    "golem-wasm-ast/poem_openapi",
    "golem-wasm-ast/poem_openapi",
    "golem-rib/poem",
]
protobuf = [
    "observability",
    "tokio",
    "dep:prost-types",
    "dep:tonic",
    "dep:golem-api-grpc",
    "golem-rib/protobuf",
    "golem-wasm-ast/protobuf",
    "golem-wasm-rpc/protobuf",
]
redis = [
    "observability",
    "serialization",
    "dep:fred"
]
serialization = []
sql = [
    "model",
    "dep:sqlx"
]
tokio = [
    "observability",
    "model",
    "dep:tokio"
]

[lib]
harness = false

[dependencies]
golem-api-grpc = { workspace = true, optional = true }
golem-rib = { workspace = true, features = ["protobuf", "poem", "json_in_errors"], optional = true } # TODO: make these optionals
golem-wasm-ast = { workspace = true, features = ["metadata", "parser", "wit-parser"], optional = true }
golem-wasm-rpc = { workspace = true, features = ["host"], optional = true }
golem-wasm-rpc-derive = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
console-subscriber = { workspace = true, optional = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
figment = { workspace = true, optional = true }
fred = { workspace = true, optional = true }
heck = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
iso8601-timestamp = { workspace = true }
lazy_static = { workspace = true }
nonempty-collections = { workspace = true }
poem = { workspace = true, optional = true }
poem-openapi = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
rand = { workspace = true }
range-set-blaze = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shadow-rs = { workspace = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-serde = { workspace = true, optional = true }
typed-path = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wit-parser = { workspace = true, optional = true }

[dependencies.bytes]
workspace = true

[dev-dependencies]
anyhow = { workspace = true }
test-r = { workspace = true }
tracing-test = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
