[package]
name = "golem-component-compilation-service"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"
harness = false

[[bin]]
harness = false
name = "golem-component-compilation-service"
path = "src/server.rs"
test = false

[dependencies]
golem-api-grpc = { version = "0.0.0", path = "../golem-api-grpc" }
golem-common = { version = "0.0.0", path = "../golem-common" }
golem-service-base = { path = "../golem-service-base" }
golem-worker-executor-base = { version = "0.0.0", path = "../golem-worker-executor-base" }

async-trait = { workspace = true }
console-subscriber = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
futures-util = "0.3.31"
http = { workspace = true }
lazy_static.workspace = true
prometheus = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
