[package]
name = "golem-component-compilation-service"
version = "0.0.0"
edition = "2021"

license-file = "../LICENSE"

[lib]
path = "src/lib.rs"
harness = false

[[bin]]
harness = false
name = "golem-component-compilation-service"
path = "src/server.rs"
test = false

[dependencies]
golem-api-grpc = { version = "=0.0.0", path = "../golem-api-grpc" }
golem-common = { version = "=0.0.0", path = "../golem-common" }
golem-service-base = { version = "=0.0.0", path = "../golem-service-base" }
golem-worker-executor = { version = "=0.0.0", path = "../golem-worker-executor" }

async-trait = { workspace = true }
futures = { workspace = true }
futures-util = "0.3.31"
http = { workspace = true }
lazy_static.workspace = true
prometheus = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }
#tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
