[package]
name = "golem-component-service-base"
version = "0.0.0"
edition = "2021"

[lib]
harness = false

[[test]]
name = "services_tests"
harness = false

[dependencies]
golem-api-grpc = { path = "../golem-api-grpc", version = "0.0.0" }
golem-common = { path = "../golem-common", version = "0.0.0" }
golem-service-base = { path = "../golem-service-base" }
golem-rib = { path = "../golem-rib" }
golem-wasm-ast = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
conditional-trait-gen = { workspace = true }
http = { workspace = true }
http_02 = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }
tap = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fastrand = "2.0.2"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
