[package]
name = "golem-component-service-base"
version = "0.0.0"
edition = "2021"

[lib]
harness = false

[[test]]
name = "tests"
harness = false

[dependencies]
golem-api-grpc = { path = "../golem-api-grpc", version = "0.0.0" }
golem-common = { path = "../golem-common", version = "0.0.0" }
golem-service-base = { path = "../golem-service-base" }
golem-rib = { path = "../golem-rib" }
golem-wasm-ast = { path = "../wasm-ast", version = "0.0.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async_zip = { workspace = true, features = ["tokio", "tokio-fs", "deflate"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
conditional-trait-gen = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
uuid = { workspace = true }

[dev-dependencies]
fastrand = "2.3.0"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
