[package]
name = "golem-component-service-base"
version = "0.0.0"
edition = "2021"

license-file = "../LICENSE"

[lib]
harness = false

[[test]]
name = "tests"
harness = false

[dependencies]
golem-api-grpc = { path = "../golem-api-grpc", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }
golem-service-base = { path = "../golem-service-base", version = "=0.0.0" }
golem-rib = { path = "../golem-rib", version = "=0.0.0" }
golem-wasm-ast = { path = "../wasm-ast", version = "=0.0.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async_zip = { workspace = true, features = ["tokio", "tokio-fs", "deflate"] }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
conditional-trait-gen = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
http = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
uuid = { workspace = true }
wac-graph = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
tryhard = { workspace = true }
