[package]
name = "golem-component-service"
version = "0.0.0"
edition = "2021"

license-file = "../LICENSE"

[[bin]]
name = "golem-component-service"
path = "src/server.rs"
harness = false
test = false

[lib]
harness = false

[dependencies]
golem-api-grpc = { path = "../golem-api-grpc", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }
golem-component-service-base = { path = "../golem-component-service-base", version = "=0.0.0" }
golem-service-base = { path = "../golem-service-base", version = "=0.0.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
