[package]
name = "golem-component-service"
version = "0.0.0"
edition = "2021"

homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "Golem Component Service"

license-file = "../LICENSE"

[[bin]]
name = "golem-component-service"
path = "src/server.rs"
harness = false
test = false

[lib]
path = "src/lib.rs"
harness = false

[[test]]
name = "tests"
harness = false

[dependencies]
golem-api-grpc = { workspace = true }
golem-common = { workspace = true }
golem-rib = { workspace = true }
golem-service-base = { workspace = true }
golem-wasm = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
async_zip = { workspace = true, features = ["tokio", "tokio-fs", "deflate"] }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
conditional-trait-gen = { workspace = true }
console-subscriber = { workspace = true }
darling = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
include_dir = { workspace = true }
lazy_static = { workspace = true }
mappable-rc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true, features = ["prometheus", "opentelemetry"] }
poem-derive = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
sanitize-filename = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
url = { workspace = true }
uuid = { workspace = true }
wac-graph = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
tryhard = { workspace = true }
